# health-transparency

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_TEMPLATE.md  paper.bib  paper.md  pyproject.toml  requirements.txt  zenodo_metadata.json
.github/workflows/: ci.yml
src/htapy/analytics/: payments.py
src/htapy/api/: server.py
src/htapy/ingest/: cms_api.py  openfda_api.py  openpayments_api.py
tests/: test_analytics.py  test_api.py  test_connectors.py
web/: index.html  package.json
web/src/: App.jsx
