[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-transparency"
version = "0.3.0"
description = "Healthcare transparency & analytics toolkit (JOSS-ready final)"
readme = "README.md"
authors = [
  {name = "Kalyana Krishna Kondapalli", email = "you@example.com"}
]
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.22.0",
  "pandas>=2.0.0",
  "duckdb>=0.8.0",
  "requests>=2.30.0",
  "requests-cache>=1.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "httpx>=0.24.0",
  "pytest-cov>=4.0.0",
  "black>=24.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "responses>=0.23.0"
]
